# revelant-search-engine

./: CMakeLists.txt  answers.json  config.json  engine.ui  main.cpp  requests.json
Google_tests/: CMakeLists.txt  Test_InvertedIndex.cpp  Test_SearchServer.cpp  test_ConverterJSON.cpp  tests_exception.cpp
includes/: ConfigErrorExceptions.h  ConverterJSON.h  InvertedIndex.h  MainWindow.h  SearchServer.h  TextIndexingTask.h  version.h.in
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  MainWindow.cpp  SearchServer.cpp  TextIndexingTask.cpp  engine.ui
